--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "main": "src/index.js",
   "dependencies": {
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
-    "typescript": "3.3.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
